# chaquopy-ec-source

./: .dockerignore  .gitmodules  Dockerfile  README.md
product/: .gitignore  README.md  build.gradle
product/gradle-plugin/: build.gradle  gradle.pom
product/runtime/: CMakeLists.txt  build.gradle  requirements-build.txt
product/runtime/src/main/c/: chaquopy.c  chaquopy_android.c  chaquopy_java.c
